--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,15 @@ stages:
     - pform=$(echo $pform |sed 's/\//-/g') # Replace / with -
     - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --build-arg PLATFORM=$PLATFORM --customPlatform=$PLATFORM --destination $CI_REGISTRY_IMAGE:$TAG-$pform
 
+docker_default:
+  stage: docker
+  image:
+    name: gcr.io/kaniko-project/executor:v1.7.0-debug
+    entrypoint: [""]
+  script:
+    - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --build-arg PLATFORM=$PLATFORM --customPlatform=$PLATFORM --destination $CI_REGISTRY_IMAGE:$TAG
+
 .publish:
   stage: publish
   image:
@@ -30,6 +39,16 @@ stages:
     - pform=$(echo $PLATFORM | awk '{ print substr ($0, 7 ) }') # Remove Linux
     - pform=$(echo $pform |sed 's/\//-/g') # Replace / with -
     - crane copy $CI_REGISTRY_IMAGE:$TAG-$pform $DOCKER_REGISTRY/$DOCKER_REGISTRY_USER/$DOCKER_REGISTRY_IMAGE:$TAG-$pform
+
+.publish_default:
+  stage: publish
+  image:
+    name: gcr.io/go-containerregistry/crane:debug
+    entrypoint: [""]
+  script:
+    - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - crane auth login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASSWORD $DOCKER_REGISTRY
+    - crane copy $CI_REGISTRY_IMAGE:$TAG $DOCKER_REGISTRY/$DOCKER_REGISTRY_USER/$DOCKER_REGISTRY_IMAGE:$TAG
 
 # Build Go Binaries for all Archs
 gorelease_latest:
@@ -83,6 +102,26 @@ gorelease_tag:
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
 
+"Package latest default to Container🐳":
+  variables:
+    TAG: latest
+    PLATFORM: "linux/amd64"
+  needs: ["gorelease_latest"]
+  extends:
+    - .docker_default
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+
+"Publish latest default to Dockerhub☁ ":
+  variables:
+    TAG: latest
+    PLATFORM: "linux/amd64"
+  extends:
+    - .publish_default
+  needs: ["Package latest default to Container🐳"]
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+
 "Package tag amd64 to Container🐳":
   variables:
     TAG: $CI_COMMIT_TAG
@@ -102,6 +141,26 @@ gorelease_tag:
   rules:
     - if: $CI_COMMIT_TAG
   needs: ["Package tag amd64 to Container🐳"]
+
+"Package tag default to Container🐳":
+  variables:
+    TAG: $CI_COMMIT_TAG
+    PLATFORM: "linux/amd64"
+  needs: ["gorelease_tag"]
+  extends:
+    - .docker_default
+  rules:
+    - if: $CI_COMMIT_TAG
+
+"Publish tag default to Dockerhub☁":
+  variables:
+    TAG: $CI_COMMIT_TAG
+    PLATFORM: "linux/amd64"
+  extends:
+    - .publish_default
+  rules:
+    - if: $CI_COMMIT_TAG
+  needs: ["Package tag default to Container🐳"]
 
 # ARM64
 "Package latest arm64 to Container🐳":
@@ -226,16 +285,30 @@ gorelease_tag:
     - if: $CI_COMMIT_TAG
   needs: ["Package tag armv7 to Container🐳"]
 
-
 # Testing
 test_get:
   stage: testing
-  image: busybox:latest
+  image: bitnami/bitnami-shell:latest
   services:
-    - name: registry.gitlab.com/patrickdomnick/gin-vals:latest-amd64
+    - name: registry.gitlab.com/patrickdomnick/gin-vals:latest
       alias: ginvals
   script:
     - export secret=$(curl -X GET "http://ginvals:9090/ref+echo://foo/bar")
+    - echo $secret
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
-  needs: ["Package latest amd64 to Container🐳"]
+  needs: ["Package latest default to Container🐳"]
+
+test:
+  stage: testing
+  image: bitnami/bitnami-shell:latest
+  services:
+    - name: registry.gitlab.com/patrickdomnick/gin-vals:latest
+      alias: ginvals
+  script:
+    - |
+      export secretJson=$(curl -H "Content-Type: application/json" -d '{"foo": "ref+echo://foo/bar","bar": "ref+echo://bar/foo"}' -X POST "http://ginvals:9090")
+    - echo $secretJson
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+  needs: ["Package latest default to Container🐳"]
