--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,7 +25,7 @@ builds:
       - amd64
       - arm64
 archives:
-  - format: binary
+  - format: zip
 checksum:
   name_template: 'checksums.txt'
 snapshot:
