--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:base"],
+  "enabledManagers": ["gomod"],
+  "packageRules": [
+    {
+      "matchPackagePatterns": ["go"],
+      "groupName": "go-deps"
+    }
+  ],
+  "postUpdateOptions": [
+    "gomodTidy"
+  ],
   "automerge": true,
   "platformAutomerge": true
 }
