ci: exclude schedule pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
   - publish
 
 release_weekly:
-  needs: []
+  stage: publish
   image: node:18-alpine
   script:
     - npx -p @semantic-release/changelog -p @semantic-release/exec -p @semantic-release/git semantic-release
@@ -73,6 +73,7 @@ gorelease_latest:
       - dist/
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^renovate/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^feature/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
 
@@ -101,6 +102,7 @@ gorelease_tag:
     - .docker
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
 
 "Publish latest amd64 to Dockerhub☁ ":
   variables:
@@ -111,6 +113,7 @@ gorelease_tag:
   needs: ["Package latest amd64 to Container🐳"]
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
 
 "Package latest default to Container🐳":
   variables:
@@ -121,6 +124,7 @@ gorelease_tag:
     - .docker_default
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^renovate/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^feature/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
 
@@ -133,6 +137,7 @@ gorelease_tag:
   needs: ["Package latest default to Container🐳"]
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
 
 "Package tag amd64 to Container🐳":
   variables:
@@ -184,6 +189,7 @@ gorelease_tag:
     - .docker
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
 
 "Publish latest arm64 to Dockerhub☁ ":
   variables:
@@ -194,6 +200,7 @@ gorelease_tag:
   needs: ["Package latest arm64 to Container🐳"]
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
 
 "Package tag arm64 to Container🐳":
   variables:
@@ -225,6 +232,7 @@ gorelease_tag:
     - .docker
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
 
 "Publish latest armv7 to Dockerhub☁ ":
   variables:
@@ -235,6 +243,7 @@ gorelease_tag:
   needs: ["Package latest armv7 to Container🐳"]
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
 
 "Package tag armv7 to Container🐳":
   variables:
@@ -254,6 +263,7 @@ gorelease_tag:
     - .publish
   rules:
     - if: $CI_COMMIT_TAG
+    - if: $CI_PIPELINE_SOURCE != "schedule"
   needs: ["Package tag armv7 to Container🐳"]
 
 # Testing
@@ -268,6 +278,7 @@ test_get:
     - echo $secret
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^renovate/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^feature/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
   needs: ["Package latest default to Container🐳"]
@@ -284,6 +295,7 @@ test:
     - echo $secretJson
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE != "schedule"
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^renovate/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^feature/ && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
   needs: ["Package latest default to Container🐳"]
