--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -7,7 +7,6 @@ plugins:
   - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/changelog"
-  - "@semantic-release/git"
-  - - "@semantic-release/exec"
+  - - "@semantic-release/git"
     - message: |
         chore(release): ${nextRelease.version} \n\n${nextRelease.notes}
