--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -9,4 +9,4 @@ plugins:
   - "@semantic-release/changelog"
   - - "@semantic-release/git"
     - message: |
-        chore(release): ${nextRelease.version} \n\n${nextRelease.notes}
+        chore(release): ${nextRelease.version}
