--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
   - publish
 
 release_weekly:
-  stage: .pre
+  stage: publish
   image: node:18-alpine
   script:
     - apk update && apk upgrade && apk add --no-cache bash git openssh
